--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css">
+    <!--==================== UNICONS ====================-->
+    <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css">
     <title>Профессиональные световые решения</title>
 </head>
 
@@ -42,10 +44,10 @@
 
     </div>
 
-    <header class="header header--home" id="header">
+    <div class="header header--home header-pt" id="header">
         <div class="header__container container">
             <div class="header__top-wrap js--header">
-                <div class="header__top flex">
+                <header class="header__top flex">
                     <div class="header__logo">
                         <a href="/" style="background-image: url('./images/header__logo.svg');"
                             class="header__logo-img"></a>
@@ -111,7 +113,7 @@
                         </div>
                     </div>
 
-                </div>
+                </header>
             </div>
             <div class="header__bottom">
                 <div class="header__categories grid">
@@ -142,7 +144,7 @@
         </div>
 
 
-    </header>
+    </div>
 
 
     <!--==================== MAIN ====================-->
