added company contacts and fix old pages

--- a/src/brands-catalog.html
+++ b/src/brands-catalog.html
@@ -81,7 +81,7 @@
     </header>
 
     <!--==================== MAIN ====================-->
-    <main class="main catalog-page header-pt">
+    <main class="main brands-catalog-page header-pt">
         <div class="main__container container">
             <div class="breadcrumbs">
                 <ul class="breadcrumbs__nav">
@@ -91,19 +91,18 @@
                 </ul>
             </div>
 
-            <!--==================== CATALOG-1 PRODUCTS ====================-->
-            <section class="section products section--top-60">
+            <!--==================== CATALOG BRANDS PRODUCTS ====================-->
+            <section class="section brands-catalog">
                 <div class="section__container">
+                    <div class="section__logo">
+                        <img src="./images/catalog__pages/brands__catalog/logo.svg" class="section__logo-img"
+                            alt="Erco">
+                    </div>
+                    <div class="section__manufacturer">
+                        <a href="#" target="_blank" class="section__manufacturer_link">Сайт производителя</a>
+                    </div>
                     <div class="section__header section__header--brands-catalog grid">
                         <div class="section__caption">
-
-                            <div class="section__logo">
-                                <img src="./images/catalog__pages/brands__catalog/logo.svg" class="section__logo-img"
-                                    alt="Erco">
-                            </div>
-                            <div class="section__manufacturer">
-                                <a href="#" target="_blank" class="section__manufacturer_link">Сайт производителя</a>
-                            </div>
 
                             <div class="section__picture"
                                 style="background-image: url('./images/catalog__pages/brands__catalog/building.png');">
