--- a/src/company.html
+++ b/src/company.html
@@ -7,12 +7,25 @@
     <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css">
     <!--==================== UNICONS ====================-->
     <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css">
-    <title>Erco - Профессиональные световые решения</title>
-<script defer src="js/app.js"></script><link href="css/app.css" rel="stylesheet"></head>
 
-<body>
+    <title>О компании - Профессиональные световые решения</title>
+</head>
+
+<body class="company-body">
     <!--==================== HEADER ====================-->
-    <header class="header__top-wrap header_bg-black js--header">
+    <div class="header__banner company--banner">
+        <div class="header__banner-content"
+            style="background-image: url('./images/company__page/header__bg-company.png');">
+            <div class="header__banner-wrapper">
+                <div class="header__banner-container container">
+                    <h1 class="header__banner-title">О компании</h1>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!--==================== HEADER ====================-->
+    <header class="header__top-wrap js--header">
         <div class="header__top flex">
             <div class="header__logo">
                 <a href="/" style="background-image: url('./images/header__logo.svg');" class="header__logo-img"></a>
@@ -80,119 +93,64 @@
         </div>
     </header>
 
+
     <!--==================== MAIN ====================-->
-    <main class="main brands-catalog-page header-pt">
-        <div class="main__container container">
-            <div class="breadcrumbs">
-                <ul class="breadcrumbs__nav">
-                    <li class="breadcrumb__item"><a href="/" class="breadcrumb__link">Главная</a></li>
-                    <li class="breadcrumb__item"><a href="/catalog-1.html" class="breadcrumb__link">Каталог</a></li>
-                    <li class="breadcrumb__item"><span class="breadcrumb__current">Erco</span></li>
-                </ul>
-            </div>
+    <main class="main project-page">
 
-            <!--==================== CATALOG BRANDS PRODUCTS ====================-->
-            <section class="section brands-catalog">
-                <div class="section__container">
-                    <div class="section__logo">
-                        <img src="./images/catalog__pages/brands__catalog/logo.svg" class="section__logo-img"
-                            alt="Erco">
+
+
+        <section class="section direction_description">
+            <div class="section__container container">
+                <div class="section__header grid">
+                    <div class="section__caption">
+                        <div class="section__title h2">Velit officia consequat</div>
                     </div>
-                    <div class="section__manufacturer">
-                        <a href="#" target="_blank" class="section__manufacturer_link">Сайт производителя</a>
-                    </div>
-                    <div class="section__header section__header--brands-catalog grid">
-                        <div class="section__caption">
-
-                            <div class="section__picture"
-                                style="background-image: url('./images/catalog__pages/brands__catalog/building.png');">
-                            </div>
-
-
-                        </div>
-                        <div class="section__description">
-                            <p>ERCO is a leading international specialist in architectural lighting, using 100% LED
-                                technology. The family business,
-                                based in Lüden­scheid, in the heart of Germany, now operates as a global player with
-                                independent sales organisations and
-                                partners in 55 countries worldwide.</p>
-                            <p>Founded in 1934, ERCO pioneered architectural lighting across Europe in the 1960s, and
-                                today, less than 50 years later,
-                                is the first established luminaire manufacturer with a portfolio based entirely on LED
-                                technology. Around
-                                1,000 committed and dedicated ERCO ­employees worldwide ensure that LED technology is
-                                developed from a pure tech­nology
-                                into a sophisticated lighting tool.</p>
-                        </div>
-                    </div>
-
-
-                    <div class="section__content">
-                        <div class="products__container grid">
-                            <a class="product__content" href="#">
-                                <span class="product__title">
-                                    Декоративный свет
-                                </span>
-                                <span class="product__img"
-                                    style="background-image: url('./images/home__categories_products/decor_light.png');"
-                                    </span>
-                            </a>
-                            <a class="product__content" href="#">
-                                <span class="product__title">
-                                    Архитектурный свет
-                                </span>
-                                <span class="product__img"
-                                    style="background-image: url('./images/home__categories_products/architect_light.png');">
-                                </span>
-                            </a>
-                            <a class="product__content" href="#">
-                                <span class="product__title">
-                                    Технический свет
-                                </span>
-                                <span class="product__img"
-                                    style="background-image: url('./images/home__categories_products/technical_light.png');">
-                                </span>
-                            </a>
-                            <a class="product__content" href="#">
-                                <span class="product__title">
-                                    Архитектурный свет
-                                </span>
-                                <span class="product__img"
-                                    style="background-image: url('./images/home__categories_products/architect_light.png');">
-                                </span>
-                            </a>
-                            <a class="product__content" href="#">
-                                <span class="product__title">
-                                    Декоративный свет
-                                </span>
-                                <span class="product__img"
-                                    style="background-image: url('./images/home__categories_products/decor_light.png');">
-                                </span>
-                            </a>
-                            <a class="product__content" href="#">
-                                <span class="product__title">
-                                    Архитектурный свет
-                                </span>
-                                <span class="product__img"
-                                    style="background-image: url('./images/home__categories_products/architect_light.png');">
-                                </span>
-                            </a>
-                            <a href="#" class="product_card--banner-image"
-                                style="background-image: url('./images/catalog__pages/products__list/banner.png');"></a>
-                        </div>
-                    </div>
-                    <div class="section__description-bottom">
-                        Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia
-                        consequat
-                        duis enim velit
-                        mollit. Exercitation veniam consequat sunt nostrud amet.
+                    <div class="section__description">
+                        <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia
+                            consequat duis enim velit
+                            mollit. Exercitation veniam consequat sunt nostrud amet.</p>
                     </div>
                 </div>
-            </section>
+
+                <div class="section__content">
+                    <div class="company__content grid">
+                        <div>
+                            <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia
+                                consequat duis enim velit
+                                mollit. Exercitation veniam consequat sunt nostrud amet.</p>
+                            <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia
+                                consequat duis enim velit
+                                mollit. Exercitation veniam consequat sunt nostrud amet.</p>
+                            <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia
+                                consequat duis enim velit
+                                mollit. Exercitation veniam consequat sunt nostrud amet.</p>
+                        </div>
+                        <div>
+                            <img src="./images/company__page/2.png" alt="">
+                        </div>
+                        <div>
+                            <img src="./images/company__page/1.png" alt="">
+                            <p class="mt-25">
+                                Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia
+                                consequat duis enim velit
+                                mollit. Exercitation veniam consequat sunt nostrud amet.
+                            </p>
+                        </div>
+                        <div>
+                            <img src="./images/company__page/3.png" alt="">
+                        </div>
+                    </div>
 
 
+                </div>
+            </div>
 
-        </div>
+            </div>
+
+            </div>
+        </section>
+
+
     </main>
 
     <!--==================== FOOTER ====================-->
@@ -200,7 +158,7 @@
         <div class="footer__container container">
             <div class="footer__content flex">
                 <div class="footer__logo">
-                    <a href="/"><img src="./images//logo__footer.svg" alt=""></a>
+                    <a href="/"><img src="./images/logo__footer.svg" alt=""></a>
                 </div>
 
                 <div class="footer__links flex">
@@ -300,8 +258,6 @@
             </div>
         </div>
     </footer>
-    <script src="https://unpkg.com/swiper/swiper-bundle.js"></script>
-    <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
 </body>
 
 </html>
