--- a/src/company.html
+++ b/src/company.html
@@ -11,7 +11,7 @@
     <title>О компании - Профессиональные световые решения</title>
 </head>
 
-<body class="company-body">
+<body class="page-header-wrapper company-body">
     <!--==================== HEADER ====================-->
     <div class="header__banner company--banner">
         <div class="header__banner-content"
