Add adaptive in Projects

--- a/src/project.html
+++ b/src/project.html
@@ -11,10 +11,11 @@
     <title>Проекты - Профессиональные световые решения</title>
 </head>
 
-<body class="page-header-wrapper project-page">
+<body class="page-header-wrapper project-page projects-body">
     <!--==================== HEADER ====================-->
     <div class="header__banner company--banner">
-        <div class="header__banner-content" style="background-image: url('./images/projects__page/back.jpg');">
+        <!-- <div class="header__banner-content" style="background-image: url('./images/projects__page/back.jpg');"> -->
+        <div class="header__banner-content">
             <div class="header__banner-wrapper">
                 <div class="header__banner-container container">
                     <h1 class="header__banner-title">Проект 1</h1>
@@ -94,7 +95,7 @@
 
 
     <!--==================== MAIN ====================-->
-    <main class="main project-page">
+    <main class="main project-page projects">
 
 
 
@@ -114,21 +115,23 @@
                 <div class="section__content">
 
                     <div class="direction_description__container1 grid">
-                        <div class="direction_description__image"
-                            style="background-image: url('./images/direction-page/1.png');"></div>
-                        <div></div>
+                        <div class="direction_description__image">
+                            <img src="./images/direction-page/1.png" alt="">
+                        </div>
                     </div>
-
                     <div class="direction_description__container2 grid">
-                        <div class="direction_description__image"
-                            style="background-image: url('./images/direction-page/2.png');"></div>
-                        <div class="direction_description__image"
-                            style="background-image: url('./images/direction-page/3.png');"></div>
-                        <div class="direction_description__image"
-                            style="background-image: url('./images/direction-page/4.png');"></div>
+                        <div class="direction_description__image">
+                            <img src="./images/direction-page/2.png" alt="">
+                        </div>
+                        <div class="direction_description__image">
+                            <img src="./images/direction-page/3.png" alt="">
+                        </div>
+                        <div class="direction_description__image">
+                            <img src="./images/direction-page/4.png" alt="">
+                        </div>
                     </div>
 
-                    <div class="direction_description__container5 grid">
+                    <div class="direction_description__container5 grid one">
                         <div class="direction_description__text2">
                             <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit
                                 officia
@@ -138,10 +141,11 @@
                     </div>
 
                     <div class="direction_description__container4 grid">
-                        <div class="direction_description__image"
-                            style="background-image: url('./images/direction-page/5.png');"></div>
-                        <div class="direction_description__image"
-                            style="background-image: url('./images/direction-page/6.png');"></div>
+                        <div class="direction_description__image">
+                            <img src="./images/direction-page/5.png" alt="">
+                        </div>
+                        <div class="direction_description__image">
+                        <img src="./images/direction-page/6.png" alt=""></div>
                     </div>
                     <div class="direction_description__container5 grid">
                         <div class="direction_description__text2">
