--- a/src/trade-offer-card.html
+++ b/src/trade-offer-card.html
@@ -88,7 +88,7 @@
         <div class="main__container container">
 
             <div class="breadcrumbs">
-                <ul class="breadcrumbs__nav">
+                <ul class="breadcrumbs__nav card-product__breadcrumbs">
                     <li class="breadcrumb__item"><a href="/" class="breadcrumb__link">Главная</a></li>
                     <li class="breadcrumb__item"><a href="/catalog-1.html" class="breadcrumb__link">Каталог</a></li>
                     <li class="breadcrumb__item"><a href="/catalog-2.html" class="breadcrumb__link">Декоративный
@@ -111,12 +111,13 @@
                                     class="card_product__image-link"
                                     style="background-image: url('./images/catalog__pages/card__product/1.png');"></div>
                                 <div id="main-image-product" data-img="./images/catalog__pages/card__product/main.png"
-                                    class="card_product__image-link--main"
-                                    style="background-image: url('./images/catalog__pages/card__product/main.png');">
+                                    class="card_product__image-link--main">
+                                    <img src="./images/catalog__pages/card__product/main.png" alt="">
                                 </div>
                                 <div data-img="./images/catalog__pages/card__product/2.png"
                                     class="card_product__image-link"
-                                    style="background-image: url('./images/catalog__pages/card__product/2.png');"></div>
+                                    style="background-image: url('./images/catalog__pages/card__product/2.png');">
+                                </div>
                                 <div data-img="./images/catalog__pages/card__product/3.png"
                                     class="card_product__image-link"
                                     style="background-image: url('./images/catalog__pages/card__product/3.png');"></div>
@@ -371,7 +372,7 @@
                         </div>
                     </div>
 
-                    <section class="section_inner">
+                    <section class="section_inner product-card__table">
                         <h3 class="section_inner__title">Модификации серии</h3>
                         <div class="section_inner__content">
                             <div class="modifications">
@@ -497,7 +498,7 @@
                     </section>
 
 
-                    <section class="section_inner">
+                    <section class="section_inner card-product-box">
                         <h3 class="section_inner__title">Товары этой серии</h3>
                         <div class="section_inner__content">
                             <div class="products__container product_cards__list grid">
