Add adaptive in Trade-offer-card

--- a/src/trade-offer-card.html
+++ b/src/trade-offer-card.html
@@ -372,9 +372,15 @@
                         </div>
                     </div>
 
-                    <section class="section_inner product-card__table">
-                        <h3 class="section_inner__title">Модификации серии</h3>
-                        <div class="section_inner__content">
+                    <section  class="section_inner product-card__table">
+                        <div class="section_inner__title-box">
+                            <h3 class="section_inner__title">Модификации серии</h3>
+                            <div class="product-card__table-btns">
+                                <button id="button_one" class="product-card__table-btn"></button>
+                                <button id="button_two" class="product-card__table-btn"></button>
+                        </div>
+                    </div>
+                        <div id="table" class="section_inner__content">
                             <div class="modifications">
                                 <table class="modifications__table">
                                     <thead>
