Add adaptive in Catalog

--- a/src/catalog.html
+++ b/src/catalog.html
@@ -668,6 +668,202 @@
                                     </div>
                                 </div>
                             </a>
+                            <a href="#" class="product__content product_card">
+                                <div class="product_card__pic">
+                                    <img src="./images/catalog__pages/products__list/1.png" alt="">
+                                </div>
+
+                                <h3 class="product_card__title">
+                                    Трековый светильник Magnetic
+                                </h3>
+
+                                <div class="product_card__attributes grid">
+                                    <div class="product_card__attribute flex">
+                                        <div class="product_card__attribute-name">Цветовая температура</div>
+                                        <div class="product_card__attribute-value">2700 K</div>
+                                    </div>
+                                    <div class="product_card__attribute flex">
+                                        <div class="product_card__attribute-name">Световой поток</div>
+                                        <div class="product_card__attribute-value">290 лм</div>
+                                    </div>
+                                    <div class="product_card__attribute flex">
+                                        <div class="product_card__attribute-name">Мощность</div>
+                                        <div class="product_card__attribute-value">7 Вт</div>
+                                    </div>
+                                    <div class="product_card__attribute flex">
+                                        <div class="product_card__attribute-name">Угол свечения</div>
+                                        <div class="product_card__attribute-value">10°</div>
+                                    </div>
+                                    <div class="product_card__attribute flex">
+                                        <div class="product_card__attribute-name">Степень защиты</div>
+                                        <div class="product_card__attribute-value">IP20</div>
+                                    </div>
+                                </div>
+
+                                <div class="product_card__cart-info grid">
+                                    <div class="product_card__cart-line flex">
+                                        <div class="product_card__price">
+                                            <span class="product_card__price-current">10 500 ₽</span>
+                                            <span class="product_card__price-old">10 500 ₽</span>
+                                        </div>
+                                        <div class="product_card__country">Италия</div>
+                                    </div>
+                                    <div class="product_card__cart-line flex">
+                                        <div class="product_card__status">
+                                            <span class="product_card__status-value product_card__status--green">Под
+                                                заказ</span>
+                                        </div>
+                                        <div class="product_card__brand">Flos</div>
+                                    </div>
+                                </div>
+                            </a>
+                            <a href="#" class="product__content product_card">
+                                <div class="product_card__pic">
+                                    <img src="./images/catalog__pages/products__list/1.png" alt="">
+                                </div>
+
+                                <h3 class="product_card__title">
+                                    Трековый светильник Magnetic
+                                </h3>
+
+                                <div class="product_card__attributes grid">
+                                    <div class="product_card__attribute flex">
+                                        <div class="product_card__attribute-name">Цветовая температура</div>
+                                        <div class="product_card__attribute-value">2700 K</div>
+                                    </div>
+                                    <div class="product_card__attribute flex">
+                                        <div class="product_card__attribute-name">Световой поток</div>
+                                        <div class="product_card__attribute-value">290 лм</div>
+                                    </div>
+                                    <div class="product_card__attribute flex">
+                                        <div class="product_card__attribute-name">Мощность</div>
+                                        <div class="product_card__attribute-value">7 Вт</div>
+                                    </div>
+                                    <div class="product_card__attribute flex">
+                                        <div class="product_card__attribute-name">Угол свечения</div>
+                                        <div class="product_card__attribute-value">10°</div>
+                                    </div>
+                                    <div class="product_card__attribute flex">
+                                        <div class="product_card__attribute-name">Степень защиты</div>
+                                        <div class="product_card__attribute-value">IP20</div>
+                                    </div>
+                                </div>
+
+                                <div class="product_card__cart-info grid">
+                                    <div class="product_card__cart-line flex">
+                                        <div class="product_card__price">
+                                            <span class="product_card__price-current">10 500 ₽</span>
+                                            <span class="product_card__price-old">10 500 ₽</span>
+                                        </div>
+                                        <div class="product_card__country">Италия</div>
+                                    </div>
+                                    <div class="product_card__cart-line flex">
+                                        <div class="product_card__status">
+                                            <span class="product_card__status-value product_card__status--green">Под
+                                                заказ</span>
+                                        </div>
+                                        <div class="product_card__brand">Flos</div>
+                                    </div>
+                                </div>
+                            </a>
+                            <a href="#" class="product__content product_card">
+                                <div class="product_card__pic">
+                                    <img src="./images/catalog__pages/products__list/1.png" alt="">
+                                </div>
+
+                                <h3 class="product_card__title">
+                                    Трековый светильник Magnetic
+                                </h3>
+
+                                <div class="product_card__attributes grid">
+                                    <div class="product_card__attribute flex">
+                                        <div class="product_card__attribute-name">Цветовая температура</div>
+                                        <div class="product_card__attribute-value">2700 K</div>
+                                    </div>
+                                    <div class="product_card__attribute flex">
+                                        <div class="product_card__attribute-name">Световой поток</div>
+                                        <div class="product_card__attribute-value">290 лм</div>
+                                    </div>
+                                    <div class="product_card__attribute flex">
+                                        <div class="product_card__attribute-name">Мощность</div>
+                                        <div class="product_card__attribute-value">7 Вт</div>
+                                    </div>
+                                    <div class="product_card__attribute flex">
+                                        <div class="product_card__attribute-name">Угол свечения</div>
+                                        <div class="product_card__attribute-value">10°</div>
+                                    </div>
+                                    <div class="product_card__attribute flex">
+                                        <div class="product_card__attribute-name">Степень защиты</div>
+                                        <div class="product_card__attribute-value">IP20</div>
+                                    </div>
+                                </div>
+
+                                <div class="product_card__cart-info grid">
+                                    <div class="product_card__cart-line flex">
+                                        <div class="product_card__price">
+                                            <span class="product_card__price-current">10 500 ₽</span>
+                                            <span class="product_card__price-old">10 500 ₽</span>
+                                        </div>
+                                        <div class="product_card__country">Италия</div>
+                                    </div>
+                                    <div class="product_card__cart-line flex">
+                                        <div class="product_card__status">
+                                            <span class="product_card__status-value product_card__status--green">Под
+                                                заказ</span>
+                                        </div>
+                                        <div class="product_card__brand">Flos</div>
+                                    </div>
+                                </div>
+                            </a>
+                            <a href="#" class="product__content product_card">
+                                <div class="product_card__pic">
+                                    <img src="./images/catalog__pages/products__list/1.png" alt="">
+                                </div>
+
+                                <h3 class="product_card__title">
+                                    Трековый светильник Magnetic
+                                </h3>
+
+                                <div class="product_card__attributes grid">
+                                    <div class="product_card__attribute flex">
+                                        <div class="product_card__attribute-name">Цветовая температура</div>
+                                        <div class="product_card__attribute-value">2700 K</div>
+                                    </div>
+                                    <div class="product_card__attribute flex">
+                                        <div class="product_card__attribute-name">Световой поток</div>
+                                        <div class="product_card__attribute-value">290 лм</div>
+                                    </div>
+                                    <div class="product_card__attribute flex">
+                                        <div class="product_card__attribute-name">Мощность</div>
+                                        <div class="product_card__attribute-value">7 Вт</div>
+                                    </div>
+                                    <div class="product_card__attribute flex">
+                                        <div class="product_card__attribute-name">Угол свечения</div>
+                                        <div class="product_card__attribute-value">10°</div>
+                                    </div>
+                                    <div class="product_card__attribute flex">
+                                        <div class="product_card__attribute-name">Степень защиты</div>
+                                        <div class="product_card__attribute-value">IP20</div>
+                                    </div>
+                                </div>
+
+                                <div class="product_card__cart-info grid">
+                                    <div class="product_card__cart-line flex">
+                                        <div class="product_card__price">
+                                            <span class="product_card__price-current">10 500 ₽</span>
+                                            <span class="product_card__price-old">10 500 ₽</span>
+                                        </div>
+                                        <div class="product_card__country">Италия</div>
+                                    </div>
+                                    <div class="product_card__cart-line flex">
+                                        <div class="product_card__status">
+                                            <span class="product_card__status-value product_card__status--green">Под
+                                                заказ</span>
+                                        </div>
+                                        <div class="product_card__brand">Flos</div>
+                                    </div>
+                                </div>
+                            </a>
                             <a href="#" class="product_card--banner-image"
                                 style="background-image: url('./images/catalog__pages/products__list/banner.png');"></a>
 
