--- a/src/services.html
+++ b/src/services.html
@@ -11,13 +11,14 @@
     <title>Услуги - Профессиональные световые решения</title>
 </head>
 
-<body class="page-header-wrapper">
+<body class="page-header-wrapper services-body">
     <!--==================== HEADER ====================-->
     <div class="header__banner company--banner">
-        <div class="header__banner-content" style="background-image: url('./images/projects__page/back.jpg');">
+        <div class="header__banner-content">
+        <!-- <div class="header__banner-content" style="background-image: url('./images/projects__page/back.jpg');"> -->
             <div class="header__banner-wrapper">
                 <div class="header__banner-container container">
-                    <h1 class="header__banner-title">Проект 1</h1>
+                    <h1 class="header__banner-title">Комплексная реализация проектов освещения</h1>
                 </div>
             </div>
         </div>
@@ -100,7 +101,8 @@
                     Подбор и поставка светового оборудования
                 </h3>
                 <div class="direction-cards__item-pic">
-                    <img src="./images/direction-page/card0.jpg" alt="Фото">
+                    <img class="direction-cards__img-desktop" src="./images/direction-page/card0.jpg" alt="Фото">
+                    <img class="direction-cards__img-mobile" src="./images/services/section1_img-one.jpeg" alt="Фото">
                 </div>
             </li>
             <li class="direction-cards__item">
@@ -108,7 +110,8 @@
                     Проектирование освещения
                 </h3>
                 <div class="direction-cards__item-pic">
-                    <img src="./images/direction-page/card1.jpg" alt="Фото">
+                    <img class="direction-cards__img-desktop" src="./images/direction-page/card1.jpg" alt="Фото">
+                    <img class="direction-cards__img-mobile" src="./images/services/section1_img-two.jpeg" alt="Фото">
                 </div>
             </li>
             <li class="direction-cards__item">
@@ -116,7 +119,8 @@
                     Реализация проекта
                 </h3>
                 <div class="direction-cards__item-pic">
-                    <img src="./images/direction-page/card2.jpg" alt="Фото">
+                    <img class="direction-cards__img-desktop" src="./images/direction-page/card2.jpg" alt="Фото">
+                    <img class="direction-cards__img-mobile" src="./images/services/section1_img-three.jpeg" alt="Фото">
                 </div>
             </li>
             <li class="direction-cards__item">
@@ -124,7 +128,8 @@
                     Консалтинг и поддержка
                 </h3>
                 <div class="direction-cards__item-pic">
-                    <img src="./images/direction-page/card3.jpg" alt="Фото">
+                    <img class="direction-cards__img-desktop" src="./images/direction-page/card3.jpg" alt="Фото">
+                    <img class="direction-cards__img-mobile" src="./images/services/section1_img-four.jpeg" alt="Фото">
                 </div>
             </li>
         </ul>
@@ -141,7 +146,7 @@
                     <div class="additionals__container grid">
                         <div class="additional__data">
                             <div class="additional__content flex">
-                                <div><a href="#" class="additional__img_link"><img
+                                <div class="additionals__img-box"><a href="#" class="additional__img_link"><img
                                             src="./images/page__services/additionals/1.svg" alt=""
                                             class="additional__img"></a></div>
 
@@ -156,7 +161,7 @@
                         </div>
                         <div class="additional__data">
                             <div class="additional__content flex">
-                                <div><a href="#" class="additional__img_link"><img
+                                <div class="additionals__img-box"><a href="#" class="additional__img_link"><img
                                             src="./images/page__services/additionals/2.svg" alt=""
                                             class="additional__img"></a></div>
 
@@ -171,7 +176,7 @@
                         </div>
                         <div class="additional__data">
                             <div class="additional__content flex">
-                                <div><a href="#" class="additional__img_link"><img
+                                <div class="additionals__img-box"><a href="#" class="additional__img_link"><img
                                             src="./images/page__services/additionals/3.svg" alt=""
                                             class="additional__img"></a></div>
 
@@ -187,7 +192,7 @@
                         </div>
                         <div class="additional__data">
                             <div class="additional__content flex">
-                                <div><a href="#" class="additional__img_link"><img
+                                <div class="additionals__img-box"><a href="#" class="additional__img_link"><img
                                             src="./images/page__services/additionals/4.svg" alt=""
                                             class="additional__img"></a>
                                 </div>
@@ -204,7 +209,7 @@
                         </div>
                         <div class="additional__data">
                             <div class="additional__content flex">
-                                <div><a href="#" class="additional__img_link"><img
+                                <div class="additionals__img-box"><a href="#" class="additional__img_link"><img
                                             src="./images/page__services/additionals/5.svg" alt=""
                                             class="additional__img"></a>
                                 </div>
@@ -222,7 +227,7 @@
                         </div>
                         <div class="additional__data">
                             <div class="additional__content flex">
-                                <div>
+                                <div class="additionals__img-box">
                                     <a href="#" class="additional__img_link"><img
                                             src="./images/page__services/additionals/6.svg" alt=""
                                             class="additional__img"></a>
@@ -262,8 +267,8 @@
                 <div class="section__content">
                     <div class="consultation__wrapper">
                         <div class="consultation__container grid">
-                            <div>
-                                <h3 class="consultation_form__title">Заказать консультацию</h3>
+                            <h3 class="consultation_form__title">Заказать консультацию</h3>
+                            <div class="consultation__form-box">
                                 <form action="#" class="consultation__form form">
                                     <div class="form__group">
                                         <label for="name" class="form__group-label">Имя</label>
@@ -285,7 +290,7 @@
                                     </div>
                                 </form>
                             </div>
-                            <div>
+                            <div class="consultation__description-box">
                                 <p class="consultation__description">
                                     Обращаясь к нам по любым вопросов светодизайна и светового оборудования
                                     вы гарантировано получите консультацию
@@ -300,7 +305,7 @@
         </section>
 
         <!--==================== SERVICE HOW ====================-->
-        <section class="section how">
+        <!-- <section class="section how">
             <div class="section__container container">
                 <div class="section__header grid">
                     <div class="section__caption">
@@ -308,12 +313,81 @@
                     </div>
                 </div>
             </div>
-        </section>
+        </section> -->
 
         <!--==================== SERVICE HOW-CONTENT ====================-->
-        <section class="section section__bg-dark section--top-60">
+        <section class="section section__bg-dark section--top-60 how-do">
+            <div class="container">
+                <div class="how-do__wrapper">
+                    <h2 class="how-do__title">
+                        Как мы это делаем
+                    </h2>
+                    <div class="how-do__inner">
 
-            <section class="section how_contents section--top-60" id="how_contents">
+                        <div class="how-do__box step">
+                            <h3 class="step__title title--one">Прорабатываем концепцию освещения</h3>
+                            <div class="step__inner">
+                                <p class="step__text">На данном этапе вы получаете презентацию с общим и достаточно детальным описанием проекта освещения. В котором будет описано каким мы видим проект. Какие типы светильников выбраны и почему.</p>
+                                <p class="step__text text--img">Создаём визуализацию и 3D-модели, согласуем светотехничекое решение.</p>
+                                <img class="step__img" src="./images/services/photo__how.jpeg" alt="photo">
+                            </div>
+                        </div>
+
+                        <div class="how-do__box step">
+                            <h3 class="step__title title--two">Делаем светотехнический расчёт (моделирование) в Dialux</h3>
+                            <div class="step__inner">
+                                <p class="step__text">На данном этапе вы получаете презентацию с общим и достаточно детальным описанием проекта освещения. В котором будет описано каким мы видим проект. Какие типы светильников выбраны и почему.</p>
+                                <p class="step__text">Создаём визуализацию и 3D-модели, согласуем светотехничекое решение.</p>
+                            </div>
+                        </div>
+
+                        <div class="how-do__box step">
+                            <h3 class="step__title title--three">Расстановка светильников на плане или чертежах</h3>
+                            <div class="step__inner">
+                                <p class="step__text">На данном этапе вы получаете презентацию с общим и достаточно детальным описанием проекта освещения. В котором будет описано каким мы видим проект. Какие типы светильников выбраны и почему.</p>
+                                <p class="step__text">Создаём визуализацию и 3D-модели, согласуем светотехничекое решение.</p>
+                            </div>
+                        </div>
+
+                        <div class="how-do__box step">
+                            <h3 class="step__title title--four">Делаем альбом спецификацию и готовим рекомендации</h3>
+                            <div class="step__inner">
+                                <p class="step__text">На данном этапе вы получаете презентацию с общим и достаточно детальным описанием проекта освещения. В котором будет описано каким мы видим проект. Какие типы светильников выбраны и почему.</p>
+                                <p class="step__text">Создаём визуализацию и 3D-модели, согласуем светотехничекое решение.</p>
+                            </div>
+                        </div>
+
+                        <div class="how-do__box step">
+                            <h3 class="step__title title--five">Комплектация и поставка светотехнического оборудования</h3>
+                            <div class="step__inner">
+                                <p class="step__text">На данном этапе вы получаете презентацию с общим и достаточно детальным описанием проекта освещения. В котором будет описано каким мы видим проект. Какие типы светильников выбраны и почему.</p>
+                                <p class="step__text">Создаём визуализацию и 3D-модели, согласуем светотехничекое решение.</p>
+                                <button class="step__btn">Полный каталог</button>
+                                <img class="step__img" src="./images/services/photo__how.jpeg" alt="photo">
+                            </div>
+                        </div>
+
+                        <div class="how-do__box step">
+                            <h3 class="step__title title--six">Настройка светового оборудования и авторский надзор</h3>
+                            <div class="step__inner">
+                                <p class="step__text">На данном этапе вы получаете презентацию с общим и достаточно детальным описанием проекта освещения. В котором будет описано каким мы видим проект. Какие типы светильников выбраны и почему.</p>
+                                <p class="step__text">Создаём визуализацию и 3D-модели, согласуем светотехничекое решение.</p>
+                            </div>
+                        </div>
+
+                        <div class="how-do__box step">
+                            <h3 class="step__title title--seven">Гарантийное обслуживание проекта</h3>
+                            <div class="step__inner">
+                                <p class="step__text">На данном этапе вы получаете презентацию с общим и достаточно детальным описанием проекта освещения. В котором будет описано каким мы видим проект. Какие типы светильников выбраны и почему.</p>
+                                <p class="step__text">Создаём визуализацию и 3D-модели, согласуем светотехничекое решение.</p>
+                            </div>
+                        </div>
+
+                    </div>
+                </div>
+                
+            </div>
+            <!-- <section class="section how_contents section--top-60" id="how_contents">
                 <div class="section__container container">
 
                     <div class="section__content">
@@ -525,7 +599,7 @@
 
                     </div>
                 </div>
-            </section>
+            </section> -->
 
 
         </section>
